# Phoenix-rs

./: .gitignore  .gitleaks.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  deny.toml  package-lock.json  package.json  taplo.toml  tsconfig.base.json
.cursor/skills/phoenix/: SKILL.md  api-react.md  api-rust.md
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  fuzz.yml  security.yml
benchmarks/: Cargo.toml
benchmarks/benches/: blind_index.rs
crates/phoenix/: Cargo.toml
crates/phoenix-auth/: Cargo.toml
crates/phoenix-auth/src/: lib.rs
crates/phoenix-cli/: Cargo.toml
crates/phoenix-cli/schemas/: phoenix-config-app.schema.json
crates/phoenix-cli/src/: dev.rs  lib.rs  main.rs  release.rs  scaffold.rs
crates/phoenix-cli/tests/: scaffold_commands.rs
crates/phoenix-config/: Cargo.toml
crates/phoenix-config/src/: builder.rs  files.rs  lib.rs  validation.rs
crates/phoenix-console/: Cargo.toml
crates/phoenix-console/src/: lib.rs
crates/phoenix-core/: Cargo.toml
crates/phoenix-core/src/: lib.rs
crates/phoenix-crypto/: Cargo.toml
crates/phoenix-crypto/src/: blind_index.rs  encryption.rs  jwt.rs  lib.rs  password.rs  token.rs
crates/phoenix-database/: Cargo.toml
crates/phoenix-database/src/: lib.rs  migration.rs
crates/phoenix-database/tests/: migrations.rs  toasty_integration.rs
crates/phoenix-dx/: Cargo.toml
crates/phoenix-dx-macros/: Cargo.toml
crates/phoenix-dx-macros/src/: lib.rs
crates/phoenix-dx/src/: lib.rs
crates/phoenix-http/: Cargo.toml
crates/phoenix-http/src/: lib.rs  sse.rs  upgrade.rs  ws.rs
crates/phoenix-logging/: Cargo.toml
crates/phoenix-logging/src/: lib.rs
crates/phoenix-macros/: Cargo.toml
crates/phoenix-macros/src/: lib.rs
crates/phoenix-mail/: Cargo.toml
crates/phoenix-mail/src/: address.rs  error.rs  lib.rs  message.rs  transport.rs
crates/phoenix-metrics/: Cargo.toml
crates/phoenix-metrics/src/: lib.rs
crates/phoenix-plugin/: Cargo.toml
crates/phoenix-plugin/src/: lib.rs
crates/phoenix-queue/: Cargo.toml
crates/phoenix-queue/src/: backend.rs  error.rs  handler.rs  job.rs  lib.rs  memory.rs  queue.rs  worker.rs
crates/phoenix-redis/: Cargo.toml
crates/phoenix-redis/src/: keys.rs  lib.rs  rate_limit.rs  session.rs  token.rs
crates/phoenix-redis/tests/: contracts.rs
crates/phoenix-release/: Cargo.toml  README.md
crates/phoenix-release/src/: checksum.rs  error.rs  install.rs  layout.rs  lib.rs  lock.rs  manifest.rs  pack.rs  rollback.rs  status.rs  switch.rs
crates/phoenix-routing/: Cargo.toml
crates/phoenix-routing/src/: lib.rs
crates/phoenix-runtime/: Cargo.toml
crates/phoenix-runtime/src/: lib.rs  tls.rs
crates/phoenix-security/: Cargo.toml
crates/phoenix-security/src/: lib.rs  session_backend.rs
crates/phoenix-storage/: Cargo.toml
crates/phoenix-storage/src/: lib.rs
crates/phoenix-testing/: Cargo.toml
crates/phoenix-testing/src/: cookie.rs  lib.rs  request.rs  response.rs
crates/phoenix-validation/: Cargo.toml
crates/phoenix-validation/src/: lib.rs
crates/phoenix-view/: Cargo.toml
crates/phoenix-view/src/: assets.rs  document.rs  lib.rs  renderer.rs  static_files.rs
crates/phoenix-view/tests/: react_ssr_csp.rs
crates/phoenix-view/tests/fixtures/: official-react-ssr-suspense.mjs
crates/phoenix/src/: lib.rs
docs/: AUTHORIZATION.md  AUTH_ADMIN.md  BUSINESS_GUIDE.md  CONFIG.md  CONTRACTS.md  DATABASE.md  DECISIONS.md  DX.md  FEATURES.md  MAIL.md  METRICS.md  MULTI_APP.md  NEXT.md  PARALLEL_TRACKS.md  PRODUCT.md  PRODUCTION_PLAN.md  PROGRESS.md  PROJECT.md  QUALITY_GATES.md  QUEUE.md  QUEUE_MAIL_CONSOLE.md  RC_CLOSURE_PLAN.md  REACT_DX_FORMS.md  REACT_DX_HOOKS.md  REACT_DX_PERF.md  REALTIME.md  REDIS.md  RELEASE.md  RELEASE_PIPELINE.md  RENDERING.md  SECURITY.md  SECURITY_SCOPE.md  TESTING_AND_STORAGE.md  TLS.md  工具与约定.md
examples/blog/: Cargo.toml  package.json  tsconfig.json  vite.config.ts  vite.ssr.config.ts
examples/blog/app/: auth.rs
examples/blog/app/controllers/: mod.rs
examples/blog/app/middleware/: mod.rs
examples/blog/app/models/: mod.rs
examples/blog/app/props/: mod.rs
examples/blog/app/requests/: mod.rs
examples/blog/app/resources/: mod.rs
examples/blog/routes/: web.rs
examples/blog/src/: lib.rs  main.rs
examples/blog/tests/: feature_tests.rs  unit_tests.rs
examples/blog/tests/feature/: controllers.rs  middleware.rs  react.rs  route_names.rs  routing.rs  startup.rs
examples/blog/tests/fixtures/: renderer.mjs
examples/blog/tests/unit/: validation.rs
examples/blog/views/: entry.tsx  islands.test.tsx  members-islands-entry.tsx  renderer.tsx  rendering.test.tsx  styles.css
examples/blog/views/islands/: like-button.tsx  member-creator.tsx  member-directory.tsx
examples/blog/views/pages/admin/: dashboard.tsx
examples/blog/views/pages/articles/: show.tsx
examples/blog/views/pages/members/: index.tsx
examples/blog/views/types/: member.ts
examples/multi-app/: Cargo.toml
examples/multi-app/src/: lib.rs  main.rs
examples/multi-app/src/apps/: admin.rs  frontend.rs  mod.rs  website.rs
examples/multi-app/tests/: multi_app.rs
examples/plugin-greeter/: Cargo.toml
examples/plugin-greeter/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: blind_index_envelope.rs  http_boundaries.rs
schemas/: phoenix-config-database.schema.json
