[workspace]
members = [
    "crates/phoenix",
    "crates/phoenix-core",
    "crates/phoenix-cli",
    "crates/phoenix-database",
    "crates/phoenix-dx",
    "crates/phoenix-dx-macros",
    "crates/phoenix-http",
    "crates/phoenix-logging",
    "crates/phoenix-macros",
    "crates/phoenix-routing",
    "crates/phoenix-security",
    "crates/phoenix-validation",
    "crates/phoenix-view",
    "examples/blog",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.95"
version = "0.1.0"

[workspace.dependencies]
aes-gcm = "0.10"
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "server-auto", "tokio"] }
matchit = "0.8"
mime = "0.3"
percent-encoding = "2"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.11"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toasty = { version = "0.8", features = ["migration", "postgresql", "serde", "sqlite"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
panic = "unwind"
