[package]
name = "phoenix-fuzz"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.13"
phoenix-crypto = { path = "../crates/phoenix-crypto" }
phoenix-http = { path = "../crates/phoenix-http" }

[[bin]]
name = "http_boundaries"
path = "fuzz_targets/http_boundaries.rs"
test = false
doc = false
bench = false

[[bin]]
name = "blind_index_envelope"
path = "fuzz_targets/blind_index_envelope.rs"
test = false
doc = false
bench = false

[workspace]
