[package]
name = "phoenix-auth"
description = "RBAC and ABAC authorization for Phoenix applications"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
phoenix-crypto = { path = "../phoenix-crypto" }
phoenix-http = { path = "../phoenix-http" }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
phoenix-routing = { path = "../phoenix-routing" }
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true

[lints]
workspace = true
