[package]
name = "phoenix-auth"
description = "RBAC and ABAC authorization for Phoenix applications"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["jwt"]
jwt = ["phoenix-crypto/jwt"]

[dependencies]
phoenix-crypto = { version = "0.1.1", path = "../phoenix-crypto", default-features = false }
phoenix-http = { version = "0.1.1", path = "../phoenix-http", default-features = false }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
phoenix-routing = { version = "0.1.1", path = "../phoenix-routing" }
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true

[lints]
workspace = true
