[package]
name = "phoenix-cli"
description = "Project scaffolding, business code generation, and development supervision for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "px"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["process", "signal"] }

[lints]
workspace = true
