[package]
name = "px"
description = "Phoenix-rs application CLI (px new / make / migrate / dev)"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
readme = "../../README.md"
homepage = "https://apizero.cn/"
repository = "https://github.com/MageGojo/Phoenix-rs"
keywords = ["web", "framework", "cli", "laravel", "react"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[lib]
name = "phoenix_cli"
path = "src/lib.rs"

[[bin]]
name = "px"
path = "src/main.rs"

[dependencies]
phoenix-release = { version = "0.1.0", path = "../phoenix-release" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["process", "signal"] }

[lints]
workspace = true
