[package]
name = "phoenix-config"
description = "Layered, validated application configuration for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dotenvy.workspace = true
http.workspace = true
serde = { workspace = true }
toml.workspace = true
zeroize.workspace = true

[lints]
workspace = true
