[package]
name = "phoenix-core"
description = "Application lifecycle and Hyper server runtime for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
phoenix-http = { path = "../phoenix-http" }
phoenix-routing = { path = "../phoenix-routing" }
rustls.workspace = true
rustls-pemfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true

[dev-dependencies]
hyper = { workspace = true, features = ["client"] }
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem", "ring"] }

[lints]
workspace = true
