[package]
name = "phoenix-crypto"
description = "JWT, authenticated encryption, and password hashing for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
base64.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
phoenix-http = { path = "../phoenix-http" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
phoenix-routing = { path = "../phoenix-routing" }
tokio.workspace = true

[lints]
workspace = true
