[package]
name = "phoenix-database"
description = "Toasty database integration, migrations, and test isolation for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
sha2.workspace = true
thiserror.workspace = true
toasty.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
