[package]
name = "phoenix-database"
description = "Toasty database integration, migrations, and test isolation for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version = "0.1.1"
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["sqlite"]
sqlite = ["toasty/sqlite"]
pgsql = ["postgresql"]
postgresql = ["toasty/postgresql"]
mysql = ["toasty/mysql"]

[dependencies]
sha2.workspace = true
thiserror.workspace = true
toasty.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
