[package]
name = "phoenix-http"
description = "HTTP request, response, handler, and middleware primitives for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
mime.workspace = true
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
