[package]
name = "phoenix-http"
description = "HTTP request, response, handler, and middleware primitives for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["websocket", "sse"]
websocket = ["dep:tokio-tungstenite"]
sse = []

[dependencies]
bytes.workspace = true
futures-util = { workspace = true, features = ["sink"] }
http.workspace = true
hyper.workspace = true
hyper-util = { workspace = true, features = ["tokio"] }
mime.workspace = true
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake"], optional = true }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]

[lints]
workspace = true
