[package]
name = "phoenix-logging"
description = "Structured logging initialization for Phoenix applications"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
