[package]
name = "phoenix-macros"
description = "Contract marker macros for Phoenix code generation"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true
