[package]
name = "phoenix-mail"
description = "Outbound mail message builder and transports for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
phoenix-http = { version = "0.1.1", path = "../phoenix-http", default-features = false }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
