[package]
name = "phoenix-metrics"
description = "Low-cardinality Prometheus metrics for Phoenix applications"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
phoenix-http = { version = "0.1.1", path = "../phoenix-http", default-features = false }

[dev-dependencies]
futures-util.workspace = true
phoenix-routing = { version = "0.1.1", path = "../phoenix-routing" }
tokio.workspace = true

[lints]
workspace = true
