[package]
name = "phoenix-plugin"
description = "Compile-time Feature / plugin installation for Phoenix-rs"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
phoenix-console = { version = "0.1.0", path = "../phoenix-console" }
phoenix-database = { version = "0.1.0", path = "../phoenix-database", default-features = false }
phoenix-http = { version = "0.1.0", path = "../phoenix-http" }
phoenix-routing = { version = "0.1.0", path = "../phoenix-routing" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
