[package]
name = "phoenix-queue"
description = "Background job queue contracts and workers for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
phoenix-metrics = { version = "0.1.0", path = "../phoenix-metrics" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
