[package]
name = "phoenix-redis"
description = "Redis adapters for Phoenix session, rate-limit, and token stores"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
jwt = ["phoenix-crypto/jwt"]

[dependencies]
phoenix-crypto = { version = "0.1.1", path = "../phoenix-crypto", default-features = false }
phoenix-http = { version = "0.1.1", path = "../phoenix-http", default-features = false }
phoenix-security = { version = "0.1.1", path = "../phoenix-security", default-features = false }
redis = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
phoenix-crypto = { version = "0.1.1", path = "../phoenix-crypto", features = ["jwt"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
