[package]
name = "phoenix-release"
description = "Release packaging, verify, atomic switch, and rollback for Phoenix-rs"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
flate2 = "1"
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
tar = "0.4"
thiserror.workspace = true
toml = { workspace = true, features = ["parse", "serde", "display"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
