[package]
name = "phoenix-routing"
description = "Laravel-inspired routing and named URL generation for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
matchit.workspace = true
percent-encoding.workspace = true
phoenix-http = { version = "0.1.1", path = "../phoenix-http", default-features = false }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
