[package]
name = "phoenix-security"
description = "Secure web defaults and middleware for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
futures-util.workspace = true
http.workspace = true
phoenix-http = { version = "0.1.0", path = "../phoenix-http" }
phoenix-metrics = { version = "0.1.0", path = "../phoenix-metrics" }
rand.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
phoenix-routing = { version = "0.1.0", path = "../phoenix-routing" }
tokio.workspace = true

[lints]
workspace = true
