[package]
name = "phoenix-security"
description = "Secure web defaults and middleware for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:phoenix-metrics"]

[dependencies]
futures-util.workspace = true
http.workspace = true
phoenix-http = { version = "0.1.1", path = "../phoenix-http", default-features = false }
phoenix-metrics = { version = "0.1.1", path = "../phoenix-metrics", optional = true }
rand.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
phoenix-metrics = { version = "0.1.1", path = "../phoenix-metrics" }
phoenix-routing = { version = "0.1.1", path = "../phoenix-routing" }
tokio.workspace = true

[lints]
workspace = true
