[package]
name = "phoenix-storage"
description = "File storage drivers for Phoenix uploads"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
