[package]
name = "phoenix-validation"
description = "Composable built-in and custom validation rules for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
phoenix-http = { version = "0.1.0", path = "../phoenix-http" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
