[package]
name = "phoenix-view"
description = "React page protocol and rendering modes for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
phoenix-http = { path = "../phoenix-http" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
