[package]
name = "phoenix-view"
description = "React page protocol and rendering modes for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
futures-util.workspace = true
phoenix-http = { version = "0.1.0", path = "../phoenix-http" }
phoenix-metrics = { version = "0.1.0", path = "../phoenix-metrics" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
phoenix-routing = { version = "0.1.0", path = "../phoenix-routing" }
phoenix-security = { version = "0.1.0", path = "../phoenix-security" }

[lints]
workspace = true
