[package]
name = "phoenix-view"
description = "React page protocol and rendering modes for Phoenix"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version = "0.1.3"
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:phoenix-metrics"]

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
futures-util.workspace = true
phoenix-http = { version = "0.1.1", path = "../phoenix-http", default-features = false }
phoenix-metrics = { version = "0.1.1", path = "../phoenix-metrics", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
phoenix-routing = { version = "0.1.1", path = "../phoenix-routing" }
phoenix-security = { version = "0.1.1", path = "../phoenix-security", default-features = false }

[lints]
workspace = true
