[package]
name = "phoenix"
description = "Laravel-inspired web application framework built on Hyper"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
phoenix-auth = { path = "../phoenix-auth" }
phoenix-core = { path = "../phoenix-core" }
phoenix-crypto = { path = "../phoenix-crypto" }
phoenix-database = { path = "../phoenix-database" }
phoenix-dx = { path = "../phoenix-dx" }
phoenix-http = { path = "../phoenix-http" }
phoenix-logging = { path = "../phoenix-logging" }
phoenix-macros = { path = "../phoenix-macros" }
phoenix-routing = { path = "../phoenix-routing" }
phoenix-security = { path = "../phoenix-security" }
phoenix-validation = { path = "../phoenix-validation" }
phoenix-view = { path = "../phoenix-view" }

[lints]
workspace = true
